<resources>
    <string name="app_name">UNIKME</string>
    <string name="stephan_hawking">Stephan Hawking</string>
    <string name="disabilty_need_not_be_an_obstacle_to_success">Disabilty need not be an obstacle to success-</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="i_am_unique_i_am_special_i_am_me">I am unique, I am special, I am me</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="i_am_me">i am me</string>
    <string name="no_excuses">NO EXCUSES.</string>
    <string name="no_regrets">NO REGRETS.</string>
    <string name="news_updattes">NEWS UPDATTES</string>
    <string name="news_update">NEWS UPDATE</string>
    <string name="community">COMMUNITY</string>
    <string name="join_unikme">JOIN UNIKME</string>
    <string name="appstore">APPSTORE</string>
    <string name="todo">TODO</string>
    <string name="news">NEWS</string>
    <string name="contact_us">CONTACT US</string>
    <string name="apps_for_hearing_impaired">APPS FOR HEARING IMPAIRED</string>
    <string name="apps_for_speech_impaired">APPS FOR SPEECH IMPAIRED</string>
    <string name="apps_for_autism">APPS FOR AUTISM</string>
    <string name="cerebral_palsy_apps">CEREBRAL PALSY APPS</string>
    <string name="phone">TODO</string>
    <string name="book">TODO</string>
    <string name="new_here_create_account">New Here?Create Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email_id">Email id</string>
    <string name="login_in">Login In</string>
    <string name="create_account">Create account</string>
    <string name="createaccount">Create Account</string>
</resources>