<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity6">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="423dp"
        android:layout_height="777dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/whatsapp_image_2020_11_30_at_8_40_29_pm" />

    <Button
        android:id="@+id/button9"
        android:layout_width="285dp"
        android:layout_height="47dp"
        android:text="@string/apps_for_hearing_impaired"
        android:textColor="#070707"
        app:backgroundTint="#FBFBFB"
        app:iconTint="#FDFAFA"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/button10"
        android:layout_width="284dp"
        android:layout_height="49dp"
        android:text="@string/apps_for_speech_impaired"
        android:textColor="#040303"
        app:backgroundTint="#FDFBFB"
        app:iconTint="#FAF8F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/button11"
        android:layout_width="289dp"
        android:layout_height="47dp"
        android:text="@string/apps_for_autism"
        android:textColor="#070707"
        app:backgroundTint="#FAF8F8"
        app:iconTint="#F8F5F5"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <Button
        android:id="@+id/button12"
        android:layout_width="285dp"
        android:layout_height="49dp"
        android:text="@string/cerebral_palsy_apps"
        android:textColor="#050505"
        app:backgroundTint="#F6F5F5"
        app:iconTint="#FAF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

</androidx.constraintlayout.widget.ConstraintLayout>